create global var translate

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,4 @@ use_DynamoRIO_extension(global_var_write_detect drutil)
 use_DynamoRIO_extension(global_var_write_detect drreg)
 use_DynamoRIO_extension(global_var_write_detect drx)
 use_DynamoRIO_extension(global_var_write_detect droption) 
+use_DynamoRIO_extension(global_var_write_detect drsyms)
